[gd_scene load_steps=3 format=2]

[ext_resource path="res://Rectangle.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 17.3333 )

[node name="Rectangle" type="Area2D"]

scale = Vector2( 3, 3 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Look" type="Polygon2D" parent="." index="0"]

polygon = PoolVector2Array( 10, -17.3333, -10, -17.3333, -10, 17.3333, 10, 17.3333 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Hide" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_entered" from="." to="." method="_on_Rectangle_area_entered"]

[connection signal="body_entered" from="." to="." method="_on_Rectangle_body_entered"]

[connection signal="tween_completed" from="Hide" to="." method="_on_Hide_tween_completed"]


